# winddcutil_rs

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: cli.rs  error.rs  main.rs  monitor.rs
src/utils/: mod.rs
